# novactl

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: pr-tests.yml
doc/features/: first_implementation.md
doc/refinements/: first_implementation_refinement.md
src/novactl/: __init__.py  cli.py  events.py  interface.py  plugin_manager.py
src/novactl/plugins/: __init__.py  execute_plugin.py  help_plugin.py  start_capture_plugin.py  stop_capture_plugin.py  version_plugin.py
tests/: __init__.py  test_cli.py  test_plugin_manager.py  test_plugins.py
