[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "novactl"
version = "1.0.0"
description = "Nova ecosystem Command Line Interface"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "nova-event-bus @ git+https://github.com/danuser2018/nova-event-bus.git@1.1.0",
]

[project.scripts]
novactl = "novactl.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.0",
]
